Segfault on changing frame in sculpt mode with a ShapeKey #38024

Closed
opened 2014-01-01 23:01:34 +01:00 by Daniel Salazar · 15 comments
Member

System Information

openSUSE 12.3 64bits
NVIDIA 480GTX SC

Blender Version

Broken: 2.69.7 9a1585a

Short description of error

Add a cube
Add a Shape Key
Enter Sculpt mode
Scroll over the timeline

**System Information** openSUSE 12.3 64bits NVIDIA 480GTX SC **Blender Version** Broken: 2.69.7 9a1585a **Short description of error** Add a cube Add a Shape Key Enter Sculpt mode Scroll over the timeline
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Can't reproduce on Win64 (mingw64 + scons) build

Can't reproduce on Win64 (mingw64 + scons) build

Added subscriber: @Sergey

Added subscriber: @Sergey

Can not reproduce the issue on linux as well. Please attach the file which for sure crashes for you.

Can not reproduce the issue on linux as well. Please attach the file which for sure crashes for you.
Author
Member

Ok, here's the file created with latest 1c8a12e
I can't even open it now. Crashes on load SculptShape.blend

If I have to create a debug build let me know :)

Ok, here's the file created with latest 1c8a12e I can't even open it now. Crashes on load [SculptShape.blend](https://archive.blender.org/developer/F60672/SculptShape.blend) If I have to create a debug build let me know :)

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

@zanqdo, hrrrrm i still couldn't see any crashes on this file :S Valgrind shows one usage of uninitialized variable, but not sure whether it's related or not.

For this issue i informed @Psy-Fi already, so he's doublechecking on this and soon fix should go to svn. Meanwhile you might try doing quick test and go to sculpt.c, grep for BKE_pbvh_raycast_project_ray_root call and replace

BKE_pbvh_raycast_project_ray_root(ss->pbvh, srd.original, ray_start, ray_end, ray_normal);

with

BKE_pbvh_raycast_project_ray_root(ss->pbvh, original, ray_start, ray_end, ray_normal);

If this wouldn't help you, having a backtrace from your debug build will help a lot!

@zanqdo, hrrrrm i still couldn't see any crashes on this file :S Valgrind shows one usage of uninitialized variable, but not sure whether it's related or not. For this issue i informed @Psy-Fi already, so he's doublechecking on this and soon fix should go to svn. Meanwhile you might try doing quick test and go to sculpt.c, grep for BKE_pbvh_raycast_project_ray_root call and replace ``` BKE_pbvh_raycast_project_ray_root(ss->pbvh, srd.original, ray_start, ray_end, ray_normal); ``` with ``` BKE_pbvh_raycast_project_ray_root(ss->pbvh, original, ray_start, ray_end, ray_normal); ``` If this wouldn't help you, having a backtrace from your debug build will help a lot!

There's an issue with vertex buffer loading and deleting of sculpting buffers. It can happen on other threads than the main thread now that multithreaded update is in and opengl functions can crash. Yesterday I worked on the buffer deletion part, writing an additional buffer identifier queue for pbvh buffers in delete_unused_buffers function. I expect I should finish the loading part today.

I expect this bug is caused by this though I had a different use case to reproduce, enter edit mode -> enter sculpt mode and repeat until crash.

There's an issue with vertex buffer loading and deleting of sculpting buffers. It can happen on other threads than the main thread now that multithreaded update is in and opengl functions can crash. Yesterday I worked on the buffer deletion part, writing an additional buffer identifier queue for pbvh buffers in delete_unused_buffers function. I expect I should finish the loading part today. I expect this bug is caused by this though I had a different use case to reproduce, enter edit mode -> enter sculpt mode and repeat until crash.

Sergey, can you take a final look to see if fix is OK?

Sergey, can you take a final look to see if fix is OK?

This issue was referenced by blender/blender-addons-contrib@d9697bc145

This issue was referenced by blender/blender-addons-contrib@d9697bc1455dc556fd233aae9d45b523af62669b

This issue was referenced by d9697bc145

This issue was referenced by d9697bc1455dc556fd233aae9d45b523af62669b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d9697bc145.

Closed by commit d9697bc145.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38024
No description provided.